# jkl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.dfa8a8e  CMakeSettings.json  LICENSE  README.md  TODO  usage
benchmark/: CMakeLists.txt  benchmark_all.cpp  benchmark_message1_proto2.pb.cc  benchmark_message1_proto2.pb.h  pb.hpp
cmake/: jklConfig.cmake.in
include/jkl/: acceptor.hpp  ares.hpp  buf.hpp  client prev.hpp  client.hpp  config.hpp  conn.hpp  connect.hpp  doc.hpp  ec_awaiter.hpp  error.hpp  file.hpp  gen.hpp  html.hpp  http.hpp  http_msg.hpp  ioc.hpp  json.hpp  lmdb.hpp  mime.hpp  params.hpp  read_write.hpp  res_pool prev.hpp  res_pool.hpp  resolver.hpp  result.hpp  socket.hpp  ssl.hpp  std_coro.hpp  std_stop_token.hpp  stop.hpp  stream.hpp  sync_await.hpp  task.hpp  tcp.hpp  timed_awaiter.hpp  timer.hpp  traits.hpp  udp.hpp  until_all.hpp  (+4 more)
include/jkl/charset/: ascii.hpp  bom.hpp  icu.hpp
include/jkl/curl/: easy.hpp  error.hpp  info.hpp  list.hpp  multi.hpp  opt.hpp  share.hpp  str.hpp  url.hpp
include/jkl/json/: fwd.hpp  read.hpp  rpc.hpp  s11n.hpp  write.hpp
include/jkl/mysql/: conn.hpp  data_types.hpp  env.hpp  err.hpp  res.hpp  stmt.hpp  test_mysql.cpp  time.hpp
include/jkl/mysql/stmt/: bind.hpp  param.hpp  result.hpp
include/jkl/pb/: README.md  dsl.hpp  error.hpp  type.hpp  varint.hpp
include/jkl/pbf/: exception.hpp  reader.hpp  type.hpp  varint.hpp  writer.hpp
include/jkl/sqlite3/: config.hpp  conn.hpp  file.hpp  spatialite.hpp  stmt.hpp
include/jkl/sqlite3/tokenizer/: fts5.hpp  jieba.hpp
include/jkl/uri/: comp.hpp  data_url.hpp  error.hpp  fwd.hpp  normalize.hpp  reader.hpp  resolve.hpp  url_codec.hpp  well_known_port.hpp  writer.hpp
include/jkl/util/: assign_append.hpp  base64.hpp  btree_map_set.hpp  buf.hpp  comparator.hpp  concepts.hpp  endian.hpp  file.hpp  flat_map_set.hpp  handle.hpp  hash.hpp  integral_constant.hpp  lambda.hpp  log.hpp  mmap.hpp  numerify.hpp  params.hpp  small_vector.hpp  span.hpp  std_concepts.hpp  std_iterator.hpp  str.hpp  stringify.hpp  strlit.hpp  tagged.hpp  tuple.hpp  type_traits.hpp  unit.hpp  unordered_map_set.hpp
test/: CMakeLists.txt  http_msg.hpp  pb.hpp  test1.cpp  test_all.cpp  uri.hpp
